add PAF unit tests

--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -32,6 +32,7 @@
     "netIdSystem",
     "nextrollIdSystem",
     "novatiqIdSystem",
+    "pafIdSystem",
     "parrableIdSystem",
     "pubProvidedIdSystem",
     "publinkIdSystem",
@@ -60,6 +61,7 @@
     "jwplayerRtdProvider",
     "medianetRtdProvider",
     "optimeraRtdProvider",
+    "pafRtdProvider",
     "permutiveRtdProvider",
     "reconciliationRtdProvider",
     "sirdataRtdProvider",
