--- a/modules/.submodules.json
+++ b/modules/.submodules.json
@@ -32,7 +32,7 @@
     "netIdSystem",
     "nextrollIdSystem",
     "novatiqIdSystem",
-    "pafIdSystem",
+    "oneKeyIdSystem",
     "parrableIdSystem",
     "pubProvidedIdSystem",
     "publinkIdSystem",
@@ -61,7 +61,7 @@
     "jwplayerRtdProvider",
     "medianetRtdProvider",
     "optimeraRtdProvider",
-    "pafRtdProvider",
+    "oneKeyRtdProvider",
     "permutiveRtdProvider",
     "reconciliationRtdProvider",
     "sirdataRtdProvider",
